--- a/data/topics/1/topic.yaml
+++ b/data/topics/1/topic.yaml
@@ -1,11 +1,16 @@
 ---
-title: "Applikationsentwicklung"
-description: "Verstehen und Entwickeln von Programmen."
-semester:
-  ## HTML und CSS
-  1.1: 1
-  1.2: 2
-  1.3: 3
-  1.4: 4
-  ## Frontend
-  ## Backend
+title: "UI / Web"
+description: "Verstehen und Entwickeln von Webseiten"
+year calendar-weeks:
+  ## Statische Webseite
+  1.1: 1 32-40
+  1.2: 1 50-10
+  1.3: 3 40-50
+  1.4: 4 40-50
+  ## JavaScript
+  2.1: 1 40-50
+  2.2: 2 40-50
+  ## User Experience (UX)
+  3.1: 1 50-5
+  3.2: 2 33-39
+
