Create master yaml

--- a/data/topics/3/topic.yaml
+++ b/data/topics/3/topic.yaml
@@ -1,7 +1,7 @@
 ---
 title: "Tools / Dienste"
 description: "Verwendung von Tools und Dienste."
-year calendar-weeks:
+year_calendar_weeks:
   ## HTTP
 
   ## Betriebssysteme
