--- a/data/topics/4/topic.yaml
+++ b/data/topics/4/topic.yaml
@@ -1,7 +1,7 @@
 ---
 title: "Tools / Dienste"
 description: "Zusammenarbeit und Organisation im Team und alleine."
-year calendar-weeks:
+year_calendar_weeks:
   ## Teamorganisation
 
   ## Selbstorganiation
