--- a/data/master.yaml
+++ b/data/master.yaml
@@ -4,18 +4,18 @@ topics:
 - title: Tools / Dienste
   description: Verwendung von Tools und Dienste.
   year_calendar_weeks: 
-  compentencies: 
+  competencies: 
   id: 3
 - title: Applikationsentwicklung
   description: Verstehen und Entwickeln von Server- und Clientseitiger Software.
   year_calendar_weeks:
-    1.1: 1 31-40
-    2.1: 1 1-15
-    3.1: 2 31-5
-    4.1: 1 47-50
-    5.1: 1 40-45
-    6.1: 2 45-5
-  compentencies:
+    211: 1 31-40
+    221: 1 1-15
+    231: 2 31-5
+    241: 1 47-50
+    251: 1 40-45
+    261: 2 45-5
+  competencies:
   - title: Single-Page-Applikation
     description: Verstehen und Umsetzen einer Single-Page-Applikation
     id: 23
@@ -77,20 +77,20 @@ topics:
 - title: Tools / Dienste
   description: Zusammenarbeit und Organisation im Team und alleine.
   year_calendar_weeks: 
-  compentencies: 
+  competencies: 
   id: 4
 - title: UI / Web
   description: Verstehen und Entwickeln von Webseiten
   year_calendar_weeks:
-    1.1: 1 32-40
-    1.2: 1 50-10
-    1.3: 3 40-50
-    1.4: 4 40-50
-    2.1: 1 40-50
-    2.2: 2 40-50
-    3.1: 1 50-5
-    3.2: 2 33-39
-  compentencies:
+    111: 1 32-40
+    112: 1 50-10
+    113: 3 40-50
+    114: 4 40-50
+    121: 1 40-50
+    122: 2 40-50
+    131: 1 50-5
+    132: 2 33-39
+  competencies:
   - title: User Experience (UX)
     description: Design, Interaktion und Gebrauchstauglichkeit einer Webseite verbessern.
     id: 13
