--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ rvm:
 
 install:
   - bundle install --path vendor/bundle
-  - bundle update rubocop
 
 script:
   - bundle exec rake build
   - bundle exec rake spec
+  - bundle exec rubocop
