--- a/spec/data/master.yaml
+++ b/spec/data/master.yaml
@@ -4,155 +4,146 @@ topics:
 - title: Applikationsentwicklung
   description: Verstehen und Entwickeln von Server- und Clientseitiger Software.
   year_calendar_weeks:
-    211: 1 31-40
-    221: 1 1-15
-    231: 2 31-5
-    241: 1 47-50
-    251: 1 40-45
-    261: 2 45-5
-  competencies:
-  - title: Single-Page-Applikation
-    description: Verstehen und Umsetzen einer Single-Page-Applikation
-    id: 23
-    levels:
-    - goals:
-      - Funktionsweise einer Single-Page-Webanwendung verstehen
-      instruments:
-      - Hilfsmittel sind noch zu definieren.
-      id: 231
-  - title: Multi-Pape Applikation
-    description: Verstehen und Umsetzen einer Multi-Pape Applikation
-    id: 22
-    levels:
-    - goals:
-      - Funktionsweise einer Multi-Pape Applikation verstehen.
-      - Eine einfache Multi-Pape Applikation ohne DB anwenden und erweitern können.
-      instruments:
-      - SpringBoot oder Ruby on Rails zum Erstellen einer dynamische Webseite.
-      - Existierende Beispiel Multi-Pape Applikation.
-      id: 221
-  - title: API
-    description: Definieren und Verwenden von Schnittstellen
-    id: 24
-    levels:
-    - goals:
-      - Die Ziele dieses Levels sind noch nicht definiert.
-      instruments:
-      - Hilfsmittel sind noch zu definieren.
-      id: 241
-  - title: Konzeption
-    description: Erstellen und dokumentieren einer Software Architektur.
-    id: 26
-    levels:
-    - goals:
-      - Die Ziele dieses Levels sind noch nicht definiert.
-      instruments:
-      - Hilfsmittel sind noch zu definieren.
-      id: 261
-  - title: Build-Tools + Dependencies
-    description: Verwalten der Abhängigkeiten, bauen und deployen von einer Webapplikation
-    id: 25
-    levels:
-    - goals:
-      - Die Ziele dieses Levels sind noch nicht definiert.
-      instruments:
-      - Hilfsmittel sind noch zu definieren.
-      id: 251
-  - title: Programmierung
-    description: Aufbau und Gestaltung einer statischen Webseite
-    id: 21
-    levels:
-    - goals:
-      - Einstieg in die Programmierung mit JavaScript.
-      - Kennenlernen von Variablen, Typen, Verzweigungen und Schleifen
-      instruments:
-      - Hilfsmittel sind noch zu definieren.
-      id: 211
-  id: 2
+    2.1.1: 1 33-40
+    2.2.1: 1 1-15
+    2.3.1: 2 31-5
+    2.4.1: 1 47-50
+    2.5.1: 1 40-45
+    2.6.1: 2 45-5
+  id: '2'
 - title: UI / Web
   description: Verstehen und Entwickeln von Webseiten
   year_calendar_weeks:
-    111: 1 32-40
-    112: 1 50-10
-    113: 3 40-50
-    114: 4 40-50
-    121: 1 40-50
-    122: 2 40-50
-    131: 1 50-5
-    132: 2 33-39
-  competencies:
-  - title: User Experience (UX)
-    description: Design, Interaktion und Gebrauchstauglichkeit einer Webseite verbessern.
-    id: 13
-    levels:
-    - goals:
-      - Responsive First Ansatz
-      instruments:
-      - https://getbootstrap.com/
-      id: 132
-    - goals:
-      - Was bedeutet User Experience (UX)?
-      - Design und Layout einer Webseite.
-      - Formulare
-      instruments:
-      - Hilfsmittel sind noch zu definieren.
-      id: 131
-  - title: JavaScript in Webseiten
-    description: Einsatz von JavaScript in einer statischen Webseite.
-    id: 12
-    levels:
-    - goals:
-      - Mit jQuery HTML-Tags in den DOM hinzufügen und bestehende HTML-Tags manipulieren.
-      - Daten mit einem Ajax-Request nachladen.
-      instruments:
-      - https://jquery.com/
-      id: 122
-    - goals:
-      - JavaScript direkt in der HTML-Seite.
-      - JavaScript in eine separate Datei auslagern.
-      - Mit JavaScript einfache click-Handler umsetzen.
-      - Ein Formular validieren und absenden.
-      - 'Entwickler-Tools: Debuggen im Browser.'
-      instruments:
-      - Hilfsmittel sind noch zu definieren.
-      id: 121
-  - title: Statische Webseite
-    description: Aufbau und Gestaltung einer statischen Webseite
-    id: 11
-    levels:
-    - goals:
-      - Responsive Webseite verstehen und umsetzen können.
-      instruments:
-      - https://www.w3schools.com/html/html_responsive.asp
-      id: 112
-    - goals:
-      - CSS-Preprocessor wie Less, Sass, Scss anwenden können.
-      instruments:
-      - http://lesscss.org/
-      - https://sass-lang.com/guide
-      - https://sass-lang.com/documentation/syntax
-      id: 114
-    - goals:
-      - 'HTML: Aufbau einer Webseite verstehen: Tags + Attribute.'
-      - 'HTML: Die wichtigsten HTML-Tags kennen.'
-      - 'CSS: Funktionsweise von Selektoren und Formatierung verstehen.'
-      - 'CSS: Die einfachen Styles anwenden können.'
-      - Trennung zwischen HTML und CSS verstehen.
-      - Einfache Layouts mit HTML + CSS umsetzen können.
-      instruments:
-      - https://www.w3schools.com/html
-      - https://www.w3schools.com/css
-      - https://www.codecademy.com/catalog/language/html-css
-      id: 111
-    - goals:
-      - Verwendung von HTML-Framework wie Bootstrap anwenden können.
-      instruments:
-      - https://getbootstrap.com/
-      id: 113
-  id: 1
+    1.1.1: 1 33-40
+    1.1.2: 1 50-10
+    1.1.3: 3 40-50
+    1.1.4: 4 40-50
+    1.2.1: 1 40-50
+    1.2.2: 2 40-50
+    1.3.1: 1 50-5
+    1.3.2: 2 33-390
+  id: '1'
+competencies:
+- title: Single-Page-Applikation
+  description: Verstehen und Umsetzen einer Single-Page-Applikation
+  id: '2.3'
+- title: Multi-Pape Applikation
+  description: Verstehen und Umsetzen einer Multi-Pape Applikation
+  id: '2.2'
+- title: API
+  description: Definieren und Verwenden von Schnittstellen
+  id: '2.4'
+- title: Konzeption
+  description: Erstellen und dokumentieren einer Software Architektur.
+  id: '2.6'
+- title: Build-Tools + Dependencies
+  description: Verwalten der Abhängigkeiten, bauen und deployen von einer Webapplikation
+  id: '2.5'
+- title: Programmierung
+  description: Aufbau und Gestaltung einer statischen Webseite
+  id: '2.1'
+- title: User Experience (UX)
+  description: Design, Interaktion und Gebrauchstauglichkeit einer Webseite verbessern.
+  id: '1.3'
+- title: JavaScript in Webseiten
+  description: Einsatz von JavaScript in einer statischen Webseite.
+  id: '1.2'
+- title: Statische Webseite
+  description: Aufbau und Gestaltung einer statischen Webseite
+  id: '1.1'
+competency_levels:
+- goals:
+  - Funktionsweise einer Single-Page-Webanwendung verstehen
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.3.1
+- goals:
+  - Funktionsweise einer Multi-Pape Applikation verstehen.
+  - Eine einfache Multi-Pape Applikation ohne DB anwenden und erweitern können.
+  instruments:
+  - SpringBoot oder Ruby on Rails zum Erstellen einer dynamische Webseite.
+  - Existierende Beispiel Multi-Pape Applikation.
+  id: 2.2.1
+- goals:
+  - Die Ziele dieses Levels sind noch nicht definiert.
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.4.1
+- goals:
+  - Die Ziele dieses Levels sind noch nicht definiert.
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.6.1
+- goals:
+  - Die Ziele dieses Levels sind noch nicht definiert.
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.5.1
+- goals:
+  - Einstieg in die Programmierung mit JavaScript.
+  - Kennenlernen von Variablen, Typen, Verzweigungen und Schleifen
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.1.1
+- goals:
+  - Responsive First Ansatz
+  instruments:
+  - https://getbootstrap.com/
+  id: 1.3.2
+- goals:
+  - Was bedeutet User Experience (UX)?
+  - Design und Layout einer Webseite.
+  - Formulare
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 1.3.1
+- goals:
+  - Mit jQuery HTML-Tags in den DOM hinzufügen und bestehende HTML-Tags manipulieren.
+  - Daten mit einem Ajax-Request nachladen.
+  instruments:
+  - https://jquery.com/
+  id: 1.2.2
+- goals:
+  - JavaScript direkt in der HTML-Seite.
+  - JavaScript in eine separate Datei auslagern.
+  - Mit JavaScript einfache click-Handler umsetzen.
+  - Ein Formular validieren und absenden.
+  - 'Entwickler-Tools: Debuggen im Browser.'
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 1.2.1
+- goals:
+  - Responsive Webseite verstehen und umsetzen können.
+  instruments:
+  - https://www.w3schools.com/html/html_responsive.asp
+  id: 1.1.2
+- goals:
+  - CSS-Preprocessor wie Less, Sass, Scss anwenden können.
+  instruments:
+  - http://lesscss.org/
+  - https://sass-lang.com/guide
+  - https://sass-lang.com/documentation/syntax
+  id: 1.1.4
+- goals:
+  - 'HTML: Aufbau einer Webseite verstehen: Tags + Attribute.'
+  - 'HTML: Die wichtigsten HTML-Tags kennen.'
+  - 'CSS: Funktionsweise von Selektoren und Formatierung verstehen.'
+  - 'CSS: Die einfachen Styles anwenden können.'
+  - Trennung zwischen HTML und CSS verstehen.
+  - Einfache Layouts mit HTML + CSS umsetzen können.
+  instruments:
+  - https://www.w3schools.com/html
+  - https://www.w3schools.com/css
+  - https://www.codecademy.com/catalog/language/html-css
+  id: 1.1.1
+- goals:
+  - Verwendung von HTML-Framework wie Bootstrap anwenden können.
+  instruments:
+  - https://getbootstrap.com/
+  id: 1.1.3
 conf:
 - semester:
   - start_at_week_nr: 33
     finish_at_week_nr: 4
   - start_at_week_nr: 5
-    finish_at_week_nr: 26
+    finish_at_week_nr: 32
