--- a/data/topics/4/topic.yaml
+++ b/data/topics/4/topic.yaml
@@ -1,7 +1,8 @@
 ---
-title: "Tools / Dienste"
-description: "Zusammenarbeit und Organisation im Team und alleine."
+title: "Team- / Selbstorganisation"
+description: "Organisation rund um die komplexe Welt der Applikationsentwicklung."
 year_calendar_weeks:
   ## Teamorganisation
 
   ## Selbstorganiation
+
