--- a/data/master.yaml
+++ b/data/master.yaml
@@ -1,11 +1,6 @@
 # This is an automaticly generated file. Don't edit this file manually
 ---
 topics:
-- title: Tools / Dienste
-  description: Verwendung von Tools und Dienste.
-  year_calendar_weeks:
-    3.1.1: 1 33-40
-  id: '3'
 - title: Applikationsentwicklung
   description: Verstehen und Entwickeln von Server- und Clientseitiger Software.
   year_calendar_weeks:
@@ -16,13 +11,6 @@ topics:
     2.5.1: 1 40-45
     2.6.1: 2 45-5
   id: '2'
-- title: Team- / Selbstorganisation
-  description: Organisation rund um die komplexe Welt der Applikationsentwicklung.
-  year_calendar_weeks:
-    4.1.1: 1 33-40
-    4.1.2: 2 33-40
-    4.2.1: 1 33-40
-  id: '4'
 - title: UI / Web
   description: Verstehen und Entwickeln von Webseiten
   year_calendar_weeks:
@@ -35,28 +23,47 @@ topics:
     1.3.1: 1 50-5
     1.3.2: 2 33-39
   id: '1'
+- title: Team- / Selbstorganisation
+  description: Organisation rund um die komplexe Welt der Applikationsentwicklung.
+  year_calendar_weeks:
+    4.1.1: 1 33-40
+    4.1.2: 2 33-40
+    4.2.1: 1 33-40
+  id: '4'
+- title: Tools / Dienste
+  description: Verwendung von Tools und Dienste.
+  year_calendar_weeks:
+    3.1.1: 1 33-40
+    3.2.1: 2 2-11
+  id: '3'
 competencies:
-- title: Office Tools
-  description: Textbearbeitung, Tabellenkalkulation, Präsentationen
-  id: '3.1'
-- title: Single-Page-Applikation
-  description: Verstehen und Umsetzen einer Single-Page-Applikation
-  id: '2.3'
 - title: Multi-Pape Applikation
   description: Verstehen und Umsetzen einer Multi-Pape Applikation
   id: '2.2'
+- title: Programmierung
+  description: Aufbau und Gestaltung einer statischen Webseite
+  id: '2.1'
 - title: API
   description: Definieren und Verwenden von Schnittstellen
   id: '2.4'
+- title: Single-Page-Applikation
+  description: Verstehen und Umsetzen einer Single-Page-Applikation
+  id: '2.3'
 - title: Konzeption
   description: Erstellen und dokumentieren einer Software Architektur.
   id: '2.6'
 - title: Build-Tools + Dependencies
   description: Verwalten der Abhängigkeiten, bauen und deployen von einer Webapplikation
   id: '2.5'
-- title: Programmierung
+- title: JavaScript in Webseiten
+  description: Einsatz von JavaScript in einer statischen Webseite.
+  id: '1.2'
+- title: Statische Webseite
   description: Aufbau und Gestaltung einer statischen Webseite
-  id: '2.1'
+  id: '1.1'
+- title: User Experience (UX)
+  description: Design, Interaktion und Gebrauchstauglichkeit einer Webseite verbessern.
+  id: '1.3'
 - title: Selbstorganisation/Selbstkompetenz
   description: Persönliche Organisation, Kommunikation, Lernstrategien
   id: '4.2'
@@ -64,28 +71,13 @@ competencies:
   description: Methoden, Werkzeuge und Wissen rund um die Organisation im Team und
     in Projekten.
   id: '4.1'
-- title: User Experience (UX)
-  description: Design, Interaktion und Gebrauchstauglichkeit einer Webseite verbessern.
-  id: '1.3'
-- title: JavaScript in Webseiten
-  description: Einsatz von JavaScript in einer statischen Webseite.
-  id: '1.2'
-- title: Statische Webseite
-  description: Aufbau und Gestaltung einer statischen Webseite
-  id: '1.1'
+- title: Betriebssysteme
+  description: Betriebssystem Anwendung, Installation und Konfiguration
+  id: '3.2'
+- title: Office Tools
+  description: Textbearbeitung, Tabellenkalkulation, Präsentationen
+  id: '3.1'
 competency_levels:
-- goals:
-  - 'Textbearbeitung: Texte, Briefe erfassen und stylen, Grafiken'
-  - 'Tabellenkalkulation: Spalten, Zeilen, Operationen, Listen'
-  - 'Präsentationen: Texte, Grafiken, Styles, Inhaltsverzeichnis'
-  instruments:
-  - Praktikum im Backoffice
-  id: 3.1.1
-- goals:
-  - Funktionsweise einer Single-Page-Webanwendung verstehen
-  instruments:
-  - Hilfsmittel sind noch zu definieren.
-  id: 2.3.1
 - goals:
   - Funktionsweise einer Multi-Pape Applikation verstehen.
   - Eine einfache Multi-Pape Applikation ohne DB anwenden und erweitern können.
@@ -94,10 +86,21 @@ competency_levels:
   - Existierende Beispiel Multi-Pape Applikation.
   id: 2.2.1
 - goals:
+  - Einstieg in die Programmierung mit JavaScript.
+  - Kennenlernen von Variablen, Typen, Verzweigungen und Schleifen
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.1.1
+- goals:
   - Die Ziele dieses Levels sind noch nicht definiert.
   instruments:
   - Hilfsmittel sind noch zu definieren.
   id: 2.4.1
+- goals:
+  - Funktionsweise einer Single-Page-Webanwendung verstehen
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.3.1
 - goals:
   - Die Ziele dieses Levels sind noch nicht definiert.
   instruments:
@@ -109,11 +112,62 @@ competency_levels:
   - Hilfsmittel sind noch zu definieren.
   id: 2.5.1
 - goals:
-  - Einstieg in die Programmierung mit JavaScript.
-  - Kennenlernen von Variablen, Typen, Verzweigungen und Schleifen
+  - Mit jQuery HTML-Tags in den DOM hinzufügen und bestehende HTML-Tags manipulieren.
+  - Daten mit einem Ajax-Request nachladen.
+  instruments:
+  - https://jquery.com/
+  id: 1.2.2
+- goals:
+  - JavaScript direkt in der HTML-Seite.
+  - JavaScript in eine separate Datei auslagern.
+  - Mit JavaScript einfache click-Handler umsetzen.
+  - Ein Formular validieren und absenden.
+  - 'Entwickler-Tools: Debuggen im Browser.'
   instruments:
   - Hilfsmittel sind noch zu definieren.
-  id: 2.1.1
+  id: 1.2.1
+- goals:
+  - Responsive Webseite verstehen und umsetzen können.
+  instruments:
+  - ÜK 101 - Webauftritt: https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=101
+  - https://www.w3schools.com/html/html_responsive.asp
+  id: 1.1.2
+- goals:
+  - Verwendung von HTML-Framework wie Bootstrap anwenden können.
+  instruments:
+  - https://getbootstrap.com/
+  id: 1.1.3
+- goals:
+  - 'HTML: Aufbau einer Webseite verstehen: Tags + Attribute.'
+  - 'HTML: Die wichtigsten HTML-Tags kennen.'
+  - 'CSS: Funktionsweise von Selektoren und Formatierung verstehen.'
+  - 'CSS: Die einfachen Styles anwenden können.'
+  - Trennung zwischen HTML und CSS verstehen.
+  - Einfache Layouts mit HTML + CSS umsetzen können.
+  instruments:
+  - https://www.w3schools.com/html
+  - https://www.w3schools.com/css
+  - https://www.codecademy.com/catalog/language/html-css
+  id: 1.1.1
+- goals:
+  - CSS-Preprocessor wie Less, Sass, Scss anwenden können.
+  instruments:
+  - http://lesscss.org/
+  - https://sass-lang.com/guide
+  - https://sass-lang.com/documentation/syntax
+  id: 1.1.4
+- goals:
+  - Responsive First Ansatz
+  instruments:
+  - https://getbootstrap.com/
+  id: 1.3.2
+- goals:
+  - Was bedeutet User Experience (UX)?
+  - Design und Layout einer Webseite.
+  - Formulare
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 1.3.1
 - goals:
   - 'Kalender: Termineinladungen bestätigen/absagen, Termine erstellen/finden'
   - 'Kalender: Abwesenheiten erfassen'
@@ -140,61 +194,24 @@ competency_levels:
   - 'Learning by Doing: Ämtli, Organisation von Events'
   id: 4.1.1
 - goals:
-  - Responsive First Ansatz
+  - Kennen der wichtigsten Hardwarekomponenten eines PCs und dessen Aufgaben
+  - Selbständig ein Betriebssystem auf einem Computer und in einer Virtual Machine
+    installieren
+  - Virtual Machines managen
+  - Software/Pakete installieren, entfernen, konfigurieren
+  - Benutzerverwaltung und Berechtigungen kennen und anwenden
   instruments:
-  - https://getbootstrap.com/
-  id: 1.3.2
+  - 'Lern-Session: Virtual Machines'
+  - Praktikum Systems Engineering
+  - ÜK 305 - Betriebssysteme: https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=305
+  id: 3.2.1
 - goals:
-  - Was bedeutet User Experience (UX)?
-  - Design und Layout einer Webseite.
-  - Formulare
+  - 'Textbearbeitung: Texte, Briefe erfassen und stylen, Grafiken'
+  - 'Tabellenkalkulation: Spalten, Zeilen, Operationen, Listen'
+  - 'Präsentationen: Texte, Grafiken, Styles, Inhaltsverzeichnis'
   instruments:
-  - Hilfsmittel sind noch zu definieren.
-  id: 1.3.1
-- goals:
-  - Mit jQuery HTML-Tags in den DOM hinzufügen und bestehende HTML-Tags manipulieren.
-  - Daten mit einem Ajax-Request nachladen.
-  instruments:
-  - https://jquery.com/
-  id: 1.2.2
-- goals:
-  - JavaScript direkt in der HTML-Seite.
-  - JavaScript in eine separate Datei auslagern.
-  - Mit JavaScript einfache click-Handler umsetzen.
-  - Ein Formular validieren und absenden.
-  - 'Entwickler-Tools: Debuggen im Browser.'
-  instruments:
-  - Hilfsmittel sind noch zu definieren.
-  id: 1.2.1
-- goals:
-  - Responsive Webseite verstehen und umsetzen können.
-  instruments:
-  - https://www.w3schools.com/html/html_responsive.asp
-  id: 1.1.2
-- goals:
-  - CSS-Preprocessor wie Less, Sass, Scss anwenden können.
-  instruments:
-  - http://lesscss.org/
-  - https://sass-lang.com/guide
-  - https://sass-lang.com/documentation/syntax
-  id: 1.1.4
-- goals:
-  - 'HTML: Aufbau einer Webseite verstehen: Tags + Attribute.'
-  - 'HTML: Die wichtigsten HTML-Tags kennen.'
-  - 'CSS: Funktionsweise von Selektoren und Formatierung verstehen.'
-  - 'CSS: Die einfachen Styles anwenden können.'
-  - Trennung zwischen HTML und CSS verstehen.
-  - Einfache Layouts mit HTML + CSS umsetzen können.
-  instruments:
-  - https://www.w3schools.com/html
-  - https://www.w3schools.com/css
-  - https://www.codecademy.com/catalog/language/html-css
-  id: 1.1.1
-- goals:
-  - Verwendung von HTML-Framework wie Bootstrap anwenden können.
-  instruments:
-  - https://getbootstrap.com/
-  id: 1.1.3
+  - Praktikum im Backoffice
+  id: 3.1.1
 conf:
 - semester:
   - start_at_week_nr: 33
