--- a/data/topics/3/competencies/2/levels/1.yaml
+++ b/data/topics/3/competencies/2/levels/1.yaml
@@ -8,4 +8,4 @@ goals:
 instruments:
   - 'Lern-Session: Virtual Machines'
   - Praktikum Systems Engineering
-  - ÜK 305 - Betriebssysteme: https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=305
+  - 'ÜK 305 - Betriebssysteme: https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=305'
