Create homepage, navbar and automatic links

--- a/data/topics/1/competencies/3/levels/1.yaml
+++ b/data/topics/1/competencies/3/levels/1.yaml
@@ -4,4 +4,4 @@ goals:
   - Design und Layout einer Webseite.
   - Formulare
 instruments:
-  - Hilfsmittel sind noch zu definieren.
+  - '[Hilfsmittel sind noch zu definieren.]()'
