--- a/data/topics/4/competencies/1/levels/2.yaml
+++ b/data/topics/4/competencies/1/levels/2.yaml
@@ -1,8 +1,8 @@
 ---
 goals:
-  - 'Projektmanagement: Meetings kennen und dessen Zweck verstehen' 
-  - 'Projektmanagement: Rollen und Aufgabenverteilung' 
+  - 'Projektmanagement: Meetings kennen und dessen Zweck verstehen'
+  - 'Projektmanagement: Rollen und Aufgabenverteilung'
 instruments:
-  - Lern-Session
-  - Lernenden-Workshops
-  - 'Learning by Doing: Features/Aufgaben innerhalb der Projektorganisation umsetzen'
+  - '[Lern-Session]()'
+  - '[Lernenden-Workshops]()'
+  - '[Learning by Doing: Features/Aufgaben innerhalb der Projektorganisation umsetzen]()'
