--- a/spec/data/topics/2/competencies/3/levels/1.yaml
+++ b/spec/data/topics/2/competencies/3/levels/1.yaml
@@ -2,4 +2,4 @@
 goals:
   - Funktionsweise einer Single-Page-Webanwendung verstehen
 instruments:
-  - Hilfsmittel sind noch zu definieren.
+  - '[Hilfsmittel sind noch zu definieren.]()'
