--- a/spec/data/topics/2/competencies/6/levels/1.yaml
+++ b/spec/data/topics/2/competencies/6/levels/1.yaml
@@ -2,4 +2,4 @@
 goals:
   - Die Ziele dieses Levels sind noch nicht definiert.
 instruments:
-  - Hilfsmittel sind noch zu definieren.
+  - '[Hilfsmittel sind noch zu definieren.]()'
