Add gem for markdown support in instruments

--- a/data/topics/1/competencies/2/levels/1.yaml
+++ b/data/topics/1/competencies/2/levels/1.yaml
@@ -6,4 +6,4 @@ goals:
   - Ein Formular validieren und absenden.
   - 'Entwickler-Tools: Debuggen im Browser.'
 instruments:
-  - '[Hilfsmittel sind noch zu definieren.]()'
+  - Hilfsmittel sind noch zu definieren.
