--- a/data/topics/3/competencies/1/levels/1.yaml
+++ b/data/topics/3/competencies/1/levels/1.yaml
@@ -4,4 +4,4 @@ goals:
   - 'Tabellenkalkulation: Spalten, Zeilen, Operationen, Listen'
   - 'Präsentationen: Texte, Grafiken, Styles, Inhaltsverzeichnis'
 instruments:
-  - '[Praktikum im Backoffice]()'
+  - Praktikum im Backoffice
