--- a/data/topics/3/competencies/2/levels/1.yaml
+++ b/data/topics/3/competencies/2/levels/1.yaml
@@ -6,6 +6,6 @@ goals:
   - 'Software/Pakete installieren, entfernen, konfigurieren'
   - 'Benutzerverwaltung und Berechtigungen kennen und anwenden'
 instruments:
-  - '[Lern-Session: Virtual Machines]()'
-  - '[Praktikum Systems Engineering]()'
+  - 'Lern-Session: Virtual Machines'
+  - Praktikum Systems Engineering
   - '[ÜK 305 - Betriebssysteme: ](https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=305)'
