--- a/data/topics/4/competencies/1/levels/1.yaml
+++ b/data/topics/4/competencies/1/levels/1.yaml
@@ -5,5 +5,5 @@ goals:
   - 'Verantwortung für Aufgaben übernehmen'
   - 'Kommunikation: '
 instruments:
-  - '[Lern-Session]()'
-  - '[Learning by Doing: Ämtli, Organisation von Events]()'
+  - Lern-Session
+  - 'Learning by Doing: Ämtli, Organisation von Events'
