--- a/data/topics/4/competencies/2/levels/1.yaml
+++ b/data/topics/4/competencies/2/levels/1.yaml
@@ -5,4 +5,4 @@ goals:
   - 'Notizen: Bei allen Gesprächen/Meetings Notizen machen'
   - 'eine Methode/Werkzeug kennen und anwenden für die Verwaltung der eigenen Aufgaben'
 instruments:
-  - '[Learning by Doing]()'
+  - Learning by Doing
