--- a/data/master.yaml
+++ b/data/master.yaml
@@ -1,6 +1,13 @@
 # This is an automaticly generated file. Don't edit this file manually
 ---
 topics:
+- title: Tools / Dienste
+  description: Verwendung von Tools und Dienste.
+  year_calendar_weeks:
+    3.1.1: 1 33-40
+    3.2.1: 1 6-15
+    3.3.1: 1 40-48
+  id: '3'
 - title: Applikationsentwicklung
   description: Verstehen und Entwickeln von Server- und Clientseitiger Software.
   year_calendar_weeks:
@@ -11,13 +18,13 @@ topics:
     2.5.1: 1 40-45
     2.6.1: 2 45-5
   id: '2'
-- title: Tools / Dienste
-  description: Verwendung von Tools und Dienste.
+- title: Team- / Selbstorganisation
+  description: Organisation rund um die komplexe Welt der Applikationsentwicklung.
   year_calendar_weeks:
-    3.1.1: 1 33-40
-    3.2.1: 1 6-15
-    3.3.1: 1 40-48
-  id: '3'
+    4.1.1: 1 33-40
+    4.1.2: 2 33-40
+    4.2.1: 1 33-40
+  id: '4'
 - title: UI / Web
   description: Verstehen und Entwickeln von Webseiten
   year_calendar_weeks:
@@ -30,23 +37,22 @@ topics:
     1.3.1: 1 50-5
     1.3.2: 2 33-39
   id: '1'
-- title: Team- / Selbstorganisation
-  description: Organisation rund um die komplexe Welt der Applikationsentwicklung.
-  year_calendar_weeks:
-    4.1.1: 1 33-40
-    4.1.2: 2 33-40
-    4.2.1: 1 33-40
-  id: '4'
 competencies:
-- title: Multi-Pape Applikation
-  description: Verstehen und Umsetzen einer Multi-Pape Applikation
-  id: '2.2'
+- title: Datenbanken
+  description: Datenbanken installieren, verwalten und Abfragen mit SQL
+  id: '3.3'
+- title: Betriebssysteme
+  description: Betriebssystem Anwendung, Installation und Konfiguration
+  id: '3.2'
+- title: Office Tools
+  description: Textbearbeitung, Tabellenkalkulation, Präsentationen
+  id: '3.1'
 - title: Single-Page-Applikation
   description: Verstehen und Umsetzen einer Single-Page-Applikation
   id: '2.3'
-- title: Programmierung
-  description: Aufbau und Gestaltung einer statischen Webseite
-  id: '2.1'
+- title: Multi-Pape Applikation
+  description: Verstehen und Umsetzen einer Multi-Pape Applikation
+  id: '2.2'
 - title: API
   description: Definieren und Verwenden von Schnittstellen
   id: '2.4'
@@ -56,24 +62,9 @@ competencies:
 - title: Build-Tools + Dependencies
   description: Verwalten der Abhängigkeiten, bauen und deployen von einer Webapplikation
   id: '2.5'
-- title: Betriebssysteme
-  description: Betriebssystem Anwendung, Installation und Konfiguration
-  id: '3.2'
-- title: Datenbanken
-  description: Datenbanken installieren, verwalten und Abfragen mit SQL
-  id: '3.3'
-- title: Office Tools
-  description: Textbearbeitung, Tabellenkalkulation, Präsentationen
-  id: '3.1'
-- title: JavaScript in Webseiten
-  description: Einsatz von JavaScript in einer statischen Webseite.
-  id: '1.2'
-- title: User Experience (UX)
-  description: Design, Interaktion und Gebrauchstauglichkeit einer Webseite verbessern.
-  id: '1.3'
-- title: Statische Webseite
+- title: Programmierung
   description: Aufbau und Gestaltung einer statischen Webseite
-  id: '1.1'
+  id: '2.1'
 - title: Selbstorganisation/Selbstkompetenz
   description: Persönliche Organisation, Kommunikation, Lernstrategien
   id: '4.2'
@@ -81,40 +72,24 @@ competencies:
   description: Methoden, Werkzeuge und Wissen rund um die Organisation im Team und
     in Projekten.
   id: '4.1'
+- title: User Experience (UX)
+  description: Design, Interaktion und Gebrauchstauglichkeit einer Webseite verbessern.
+  id: '1.3'
+- title: JavaScript in Webseiten
+  description: Einsatz von JavaScript in einer statischen Webseite.
+  id: '1.2'
+- title: Statische Webseite
+  description: Aufbau und Gestaltung einer statischen Webseite
+  id: '1.1'
 competency_levels:
 - goals:
-  - Funktionsweise einer Multi-Pape Applikation verstehen.
-  - Eine einfache Multi-Pape Applikation ohne DB anwenden und erweitern können.
+  - Datenbank als Dienst oder Container lokal installieren
+  - Benutzer verwalten
+  - Tabellen erstellen, Berechtigungen
+  - Einfache Queries per SQL
   instruments:
-  - "[SpringBoot oder Ruby on Rails zum Erstellen einer dynamische Webseite.]()"
-  - "[Existierende Beispiel Multi-Pape Applikation.]()"
-  id: 2.2.1
-- goals:
-  - Funktionsweise einer Single-Page-Webanwendung verstehen
-  instruments:
-  - "[Hilfsmittel sind noch zu definieren.]()"
-  id: 2.3.1
-- goals:
-  - Einstieg in die Programmierung mit JavaScript.
-  - Kennenlernen von Variablen, Typen, Verzweigungen und Schleifen
-  instruments:
-  - "[Hilfsmittel sind noch zu definieren.]()"
-  id: 2.1.1
-- goals:
-  - Die Ziele dieses Levels sind noch nicht definiert.
-  instruments:
-  - "[Hilfsmittel sind noch zu definieren.]()"
-  id: 2.4.1
-- goals:
-  - Die Ziele dieses Levels sind noch nicht definiert.
-  instruments:
-  - "[Hilfsmittel sind noch zu definieren.]()"
-  id: 2.6.1
-- goals:
-  - Die Ziele dieses Levels sind noch nicht definiert.
-  instruments:
-  - "[Hilfsmittel sind noch zu definieren.]()"
-  id: 2.5.1
+  - "[https://www.codecademy.com/learn/learn-sql](https://www.codecademy.com/learn/learn-sql)"
+  id: 3.3.1
 - goals:
   - Kennen der wichtigsten Hardwarekomponenten eines PCs und dessen Aufgaben
   - Selbständig ein Betriebssystem auf einem Computer und in einer Virtual Machine
@@ -123,30 +98,92 @@ competency_levels:
   - Software/Pakete installieren, entfernen, konfigurieren
   - Benutzerverwaltung und Berechtigungen kennen und anwenden
   instruments:
-  - "[Lern-Session: Virtual Machines]()"
-  - "[Praktikum Systems Engineering]()"
+  - 'Lern-Session: Virtual Machines'
+  - Praktikum Systems Engineering
   - "[ÜK 305 - Betriebssysteme: ](https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=305)"
   id: 3.2.1
-- goals:
-  - Datenbank als Dienst oder Container lokal installieren
-  - Benutzer verwalten
-  - Tabellen erstellen, Berechtigungen
-  - Einfache Queries per SQL
-  instruments:
-  - "[](https://www.codecademy.com/learn/learn-sql)"
-  id: 3.3.1
 - goals:
   - 'Textbearbeitung: Texte, Briefe erfassen und stylen, Grafiken'
   - 'Tabellenkalkulation: Spalten, Zeilen, Operationen, Listen'
   - 'Präsentationen: Texte, Grafiken, Styles, Inhaltsverzeichnis'
   instruments:
-  - "[Praktikum im Backoffice]()"
+  - Praktikum im Backoffice
   id: 3.1.1
+- goals:
+  - Funktionsweise einer Single-Page-Webanwendung verstehen
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.3.1
+- goals:
+  - Funktionsweise einer Multi-Pape Applikation verstehen.
+  - Eine einfache Multi-Pape Applikation ohne DB anwenden und erweitern können.
+  instruments:
+  - SpringBoot oder Ruby on Rails zum Erstellen einer dynamische Webseite.
+  - Existierende Beispiel Multi-Pape Applikation.
+  id: 2.2.1
+- goals:
+  - Die Ziele dieses Levels sind noch nicht definiert.
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.4.1
+- goals:
+  - Die Ziele dieses Levels sind noch nicht definiert.
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.6.1
+- goals:
+  - Die Ziele dieses Levels sind noch nicht definiert.
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.5.1
+- goals:
+  - Einstieg in die Programmierung mit JavaScript.
+  - Kennenlernen von Variablen, Typen, Verzweigungen und Schleifen
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 2.1.1
+- goals:
+  - 'Kalender: Termineinladungen bestätigen/absagen, Termine erstellen/finden'
+  - 'Kalender: Abwesenheiten erfassen'
+  - 'Notizen: Bei allen Gesprächen/Meetings Notizen machen'
+  - eine Methode/Werkzeug kennen und anwenden für die Verwaltung der eigenen Aufgaben
+  instruments:
+  - Learning by Doing
+  id: 4.2.1
+- goals:
+  - 'Projektmanagement: Meetings kennen und dessen Zweck verstehen'
+  - 'Projektmanagement: Rollen und Aufgabenverteilung'
+  instruments:
+  - Lern-Session
+  - Lernenden-Workshops
+  - 'Learning by Doing: Features/Aufgaben innerhalb der Projektorganisation umsetzen'
+  id: 4.1.2
+- goals:
+  - Sich seiner Rolle im Team bewusst sein
+  - Aufgaben im Team identifizieren und übernehmen
+  - Verantwortung für Aufgaben übernehmen
+  - 'Kommunikation: '
+  instruments:
+  - Lern-Session
+  - 'Learning by Doing: Ämtli, Organisation von Events'
+  id: 4.1.1
+- goals:
+  - Responsive First Ansatz
+  instruments:
+  - "[https://getbootstrap.com/](https://getbootstrap.com/)"
+  id: 1.3.2
+- goals:
+  - Was bedeutet User Experience (UX)?
+  - Design und Layout einer Webseite.
+  - Formulare
+  instruments:
+  - Hilfsmittel sind noch zu definieren.
+  id: 1.3.1
 - goals:
   - Mit jQuery HTML-Tags in den DOM hinzufügen und bestehende HTML-Tags manipulieren.
   - Daten mit einem Ajax-Request nachladen.
   instruments:
-  - "[](https://jquery.com/)"
+  - "[https://jquery.com/](https://jquery.com/)"
   id: 1.2.2
 - goals:
   - JavaScript direkt in der HTML-Seite.
@@ -155,37 +192,20 @@ competency_levels:
   - Ein Formular validieren und absenden.
   - 'Entwickler-Tools: Debuggen im Browser.'
   instruments:
-  - "[Hilfsmittel sind noch zu definieren.]()"
+  - Hilfsmittel sind noch zu definieren.
   id: 1.2.1
-- goals:
-  - Responsive First Ansatz
-  instruments:
-  - "[](https://getbootstrap.com/)"
-  id: 1.3.2
-- goals:
-  - Was bedeutet User Experience (UX)?
-  - Design und Layout einer Webseite.
-  - Formulare
-  instruments:
-  - "[Hilfsmittel sind noch zu definieren.]()"
-  id: 1.3.1
-- goals:
-  - Verwendung von HTML-Framework wie Bootstrap anwenden können.
-  instruments:
-  - "[](https://getbootstrap.com/)"
-  id: 1.1.3
 - goals:
   - Responsive Webseite verstehen und umsetzen können.
   instruments:
   - "[ÜK 101 - Webauftritt: ](https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=101)"
-  - "(https://www.w3schools.com/html/html_responsive.asp)"
+  - "[https://www.w3schools.com/html/html_responsive.asp](https://www.w3schools.com/html/html_responsive.asp)"
   id: 1.1.2
 - goals:
   - CSS-Preprocessor wie Less, Sass, Scss anwenden können.
   instruments:
-  - "[](http://lesscss.org/)"
-  - "[](https://sass-lang.com/guide)"
-  - "[](https://sass-lang.com/documentation/syntax)"
+  - "[http://lesscss.org/](http://lesscss.org/)"
+  - "[https://sass-lang.com/guide](https://sass-lang.com/guide)"
+  - "[https://sass-lang.com/documentation/syntax](https://sass-lang.com/documentation/syntax)"
   id: 1.1.4
 - goals:
   - 'HTML: Aufbau einer Webseite verstehen: Tags + Attribute.'
@@ -195,35 +215,15 @@ competency_levels:
   - Trennung zwischen HTML und CSS verstehen.
   - Einfache Layouts mit HTML + CSS umsetzen können.
   instruments:
-  - "[](https://www.w3schools.com/html)"
-  - "[](https://www.w3schools.com/css)"
-  - "[](https://www.codecademy.com/catalog/language/html-css)"
+  - "[https://www.w3schools.com/html](https://www.w3schools.com/html)"
+  - "[https://www.w3schools.com/css](https://www.w3schools.com/css)"
+  - "[https://www.codecademy.com/catalog/language/html-css](https://www.codecademy.com/catalog/language/html-css)"
   id: 1.1.1
 - goals:
-  - 'Kalender: Termineinladungen bestätigen/absagen, Termine erstellen/finden'
-  - 'Kalender: Abwesenheiten erfassen'
-  - 'Notizen: Bei allen Gesprächen/Meetings Notizen machen'
-  - eine Methode/Werkzeug kennen und anwenden für die Verwaltung der eigenen Aufgaben
+  - Verwendung von HTML-Framework wie Bootstrap anwenden können.
   instruments:
-  - "[Learning by Doing]()"
-  id: 4.2.1
-- goals:
-  - 'Projektmanagement: Meetings kennen und dessen Zweck verstehen'
-  - 'Projektmanagement: Rollen und Aufgabenverteilung'
-  instruments:
-  - "[Lern-Session]()"
-  - "[Lernenden-Workshops]()"
-  - "[Learning by Doing: Features/Aufgaben innerhalb der Projektorganisation umsetzen]()"
-  id: 4.1.2
-- goals:
-  - Sich seiner Rolle im Team bewusst sein
-  - Aufgaben im Team identifizieren und übernehmen
-  - Verantwortung für Aufgaben übernehmen
-  - 'Kommunikation: '
-  instruments:
-  - "[Lern-Session]()"
-  - "[Learning by Doing: Ämtli, Organisation von Events]()"
-  id: 4.1.1
+  - "[https://getbootstrap.com/](https://getbootstrap.com/)"
+  id: 1.1.3
 conf:
 - semester:
   - start_at_week_nr: 33
