--- a/spec/data/topics/2/competencies/1/levels/1.yaml
+++ b/spec/data/topics/2/competencies/1/levels/1.yaml
@@ -3,4 +3,4 @@ goals:
   - Einstieg in die Programmierung mit JavaScript.
   - Kennenlernen von Variablen, Typen, Verzweigungen und Schleifen
 instruments:
-  - '[Hilfsmittel sind noch zu definieren.]()'
+  - Hilfsmittel sind noch zu definieren.
