Feature 52593 automatic links (#7)
* Create automatic links, add navbar

--- a/data/topics/4/competencies/2/levels/1.yaml
+++ b/data/topics/4/competencies/2/levels/1.yaml
@@ -1,8 +1,8 @@
 ---
 goals:
-  - 'Kalender: Termineinladungen bestätigen/absagen, Termine erstellen/finden' 
-  - 'Kalender: Abwesenheiten erfassen' 
-  - 'Notizen: Bei allen Gesprächen/Meetings Notizen machen' 
-  - 'eine Methode/Werkzeug kennen und anwenden für die Verwaltung der eigenen Aufgaben' 
+  - 'Kalender: Termineinladungen bestätigen/absagen, Termine erstellen/finden'
+  - 'Kalender: Abwesenheiten erfassen'
+  - 'Notizen: Bei allen Gesprächen/Meetings Notizen machen'
+  - 'eine Methode/Werkzeug kennen und anwenden für die Verwaltung der eigenen Aufgaben'
 instruments:
-  - 'Learning by Doing'
+  - Learning by Doing
