--- a/data/master.yaml
+++ b/data/master.yaml
@@ -88,7 +88,7 @@ competency_levels:
   - Tabellen erstellen, Berechtigungen
   - Einfache Queries per SQL
   instruments:
-  - https://www.codecademy.com/learn/learn-sql
+  - "[https://www.codecademy.com/learn/learn-sql](https://www.codecademy.com/learn/learn-sql)"
   id: 3.3.1
 - goals:
   - Kennen der wichtigsten Hardwarekomponenten eines PCs und dessen Aufgaben
@@ -100,7 +100,7 @@ competency_levels:
   instruments:
   - 'Lern-Session: Virtual Machines'
   - Praktikum Systems Engineering
-  - 'ÜK 305 - Betriebssysteme: https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=305'
+  - "[ÜK 305 - Betriebssysteme: ](https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=305)"
   id: 3.2.1
 - goals:
   - 'Textbearbeitung: Texte, Briefe erfassen und stylen, Grafiken'
@@ -170,7 +170,7 @@ competency_levels:
 - goals:
   - Responsive First Ansatz
   instruments:
-  - https://getbootstrap.com/
+  - "[https://getbootstrap.com/](https://getbootstrap.com/)"
   id: 1.3.2
 - goals:
   - Was bedeutet User Experience (UX)?
@@ -183,7 +183,7 @@ competency_levels:
   - Mit jQuery HTML-Tags in den DOM hinzufügen und bestehende HTML-Tags manipulieren.
   - Daten mit einem Ajax-Request nachladen.
   instruments:
-  - https://jquery.com/
+  - "[https://jquery.com/](https://jquery.com/)"
   id: 1.2.2
 - goals:
   - JavaScript direkt in der HTML-Seite.
@@ -197,15 +197,15 @@ competency_levels:
 - goals:
   - Responsive Webseite verstehen und umsetzen können.
   instruments:
-  - 'ÜK 101 - Webauftritt: https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=101'
-  - https://www.w3schools.com/html/html_responsive.asp
+  - "[ÜK 101 - Webauftritt: ](https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=101)"
+  - "[https://www.w3schools.com/html/html_responsive.asp](https://www.w3schools.com/html/html_responsive.asp)"
   id: 1.1.2
 - goals:
   - CSS-Preprocessor wie Less, Sass, Scss anwenden können.
   instruments:
-  - http://lesscss.org/
-  - https://sass-lang.com/guide
-  - https://sass-lang.com/documentation/syntax
+  - "[http://lesscss.org/](http://lesscss.org/)"
+  - "[https://sass-lang.com/guide](https://sass-lang.com/guide)"
+  - "[https://sass-lang.com/documentation/syntax](https://sass-lang.com/documentation/syntax)"
   id: 1.1.4
 - goals:
   - 'HTML: Aufbau einer Webseite verstehen: Tags + Attribute.'
@@ -215,14 +215,14 @@ competency_levels:
   - Trennung zwischen HTML und CSS verstehen.
   - Einfache Layouts mit HTML + CSS umsetzen können.
   instruments:
-  - https://www.w3schools.com/html
-  - https://www.w3schools.com/css
-  - https://www.codecademy.com/catalog/language/html-css
+  - "[https://www.w3schools.com/html](https://www.w3schools.com/html)"
+  - "[https://www.w3schools.com/css](https://www.w3schools.com/css)"
+  - "[https://www.codecademy.com/catalog/language/html-css](https://www.codecademy.com/catalog/language/html-css)"
   id: 1.1.1
 - goals:
   - Verwendung von HTML-Framework wie Bootstrap anwenden können.
   instruments:
-  - https://getbootstrap.com/
+  - "[https://getbootstrap.com/](https://getbootstrap.com/)"
   id: 1.1.3
 conf:
 - semester:
