--- a/spec/data/master.yaml
+++ b/spec/data/master.yaml
@@ -61,8 +61,8 @@ competency_levels:
   - Funktionsweise einer Multi-Pape Applikation verstehen.
   - Eine einfache Multi-Pape Applikation ohne DB anwenden und erweitern können.
   instruments:
-  - SpringBoot oder Ruby on Rails zum Erstellen einer dynamische Webseite.
-  - Existierende Beispiel Multi-Pape Applikation.
+  - "[SpringBoot oder Ruby on Rails zum Erstellen einer dynamische Webseite.]()"
+  - "[Existierende Beispiel Multi-Pape Applikation.]()"
   id: 2.2.1
 - goals:
   - Die Ziele dieses Levels sind noch nicht definiert.
@@ -88,7 +88,7 @@ competency_levels:
 - goals:
   - Responsive First Ansatz
   instruments:
-  - https://getbootstrap.com/
+  - "[https://getbootstrap.com/](https://getbootstrap.com/)"
   id: 1.3.2
 - goals:
   - Was bedeutet User Experience (UX)?
@@ -101,7 +101,7 @@ competency_levels:
   - Mit jQuery HTML-Tags in den DOM hinzufügen und bestehende HTML-Tags manipulieren.
   - Daten mit einem Ajax-Request nachladen.
   instruments:
-  - https://jquery.com/
+  - "[https://jquery.com/](https://jquery.com/)"
   id: 1.2.2
 - goals:
   - JavaScript direkt in der HTML-Seite.
@@ -115,14 +115,17 @@ competency_levels:
 - goals:
   - Responsive Webseite verstehen und umsetzen können.
   instruments:
-  - https://www.w3schools.com/html/html_responsive.asp
+  - "[ÜK 101 - Webauftritt: ](https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=101)"
+  - Text zum testen (https://www.w3schools.com/html/html_responsive.asp) Text zum
+    testen (https://www.w3schools.com/html/html_responsive.asp) Noch mehr Text
+  - Lorem ipsum dolor sit amet.
   id: 1.1.2
 - goals:
   - CSS-Preprocessor wie Less, Sass, Scss anwenden können.
   instruments:
-  - http://lesscss.org/
-  - https://sass-lang.com/guide
-  - https://sass-lang.com/documentation/syntax
+  - "[http://lesscss.org/](http://lesscss.org/)"
+  - "[https://sass-lang.com/guide](https://sass-lang.com/guide)"
+  - "[https://sass-lang.com/documentation/syntax](https://sass-lang.com/documentation/syntax)"
   id: 1.1.4
 - goals:
   - 'HTML: Aufbau einer Webseite verstehen: Tags + Attribute.'
@@ -132,14 +135,14 @@ competency_levels:
   - Trennung zwischen HTML und CSS verstehen.
   - Einfache Layouts mit HTML + CSS umsetzen können.
   instruments:
-  - https://www.w3schools.com/html
-  - https://www.w3schools.com/css
-  - https://www.codecademy.com/catalog/language/html-css
+  - "[https://www.w3schools.com/html](https://www.w3schools.com/html)"
+  - "[https://www.w3schools.com/css](https://www.w3schools.com/css)"
+  - "[https://www.codecademy.com/catalog/language/html-css](https://www.codecademy.com/catalog/language/html-css)"
   id: 1.1.1
 - goals:
   - Verwendung von HTML-Framework wie Bootstrap anwenden können.
   instruments:
-  - https://getbootstrap.com/
+  - "[https://getbootstrap.com/](https://getbootstrap.com/)"
   id: 1.1.3
 conf:
 - semester:
