--- a/spec/data/topics/1/competencies/1/levels/2.yaml
+++ b/spec/data/topics/1/competencies/1/levels/2.yaml
@@ -2,4 +2,6 @@
 goals:
   - Responsive Webseite verstehen und umsetzen können.
 instruments:
-  - https://www.w3schools.com/html/html_responsive.asp
+  - '[ÜK 101 - Webauftritt: ](https://cf.ict-berufsbildung.ch/modules.php?name=Mbk&a=20101&cmodnr=101)'
+  - 'Text zum testen (https://www.w3schools.com/html/html_responsive.asp) Text zum testen (https://www.w3schools.com/html/html_responsive.asp) Noch mehr Text'
+  - Lorem ipsum dolor sit amet.
