Update ausbildungsplan programming

--- a/data/topics/2/competencies/3/levels/1.yaml
+++ b/data/topics/2/competencies/3/levels/1.yaml
@@ -1,5 +1,6 @@
 ---
 goals:
   - Funktionsweise einer Single-Page-Webanwendung verstehen
+  - Erste Beispielstutorials durchgeführt
 instruments:
   - Hilfsmittel sind noch zu definieren.
