--- a/data/topics/2/competencies/4/levels/1.yaml
+++ b/data/topics/2/competencies/4/levels/1.yaml
@@ -1,5 +1,10 @@
 ---
 goals:
-  - Die Ziele dieses Levels sind noch nicht definiert.
+  - Backend Projektgerüst erstellen
+  - Funktion einer API verstehen
+  - Simple Applikation selber bauen
+  - CRUD Operationen als Endpunkte anbieten und abbilden
+  
 instruments:
-  - Hilfsmittel sind noch zu definieren.
+  - (API Guidelines)[https://hackernoon.com/restful-api-designing-guidelines-the-best-practices-60e1d954e7c9]
+  - (RESTful Guidelines)[https://restfulapi.net/]
