--- a/data/topics/2/competencies/6/levels/1.yaml
+++ b/data/topics/2/competencies/6/levels/1.yaml
@@ -1,5 +1,6 @@
 ---
 goals:
-  - Die Ziele dieses Levels sind noch nicht definiert.
+  - Zusammenspiel verschiedener Applikationen verstehen
+  - Moddelierung von kleinen Applikationen
 instruments:
   - Hilfsmittel sind noch zu definieren.
