--- a/data/topics/2/competencies/6/levels/2.yaml
+++ b/data/topics/2/competencies/6/levels/2.yaml
@@ -1,5 +1,6 @@
 ---
 goals:
-  - Die Ziele dieses Levels sind noch nicht definiert.
+  - Applikationen als Microservices modellieren
+  - Konzeption und Modellierung der Kommunikation
 instruments:
   - Hilfsmittel sind noch zu definieren.
