--- a/data/topics/2/competencies/1/levels/2.yaml
+++ b/data/topics/2/competencies/1/levels/2.yaml
@@ -1,6 +1,7 @@
 ---
 goals:
-  - Einstieg in die Programmierung mit JavaScript.
-  - Kennenlernen von Variablen, Typen, Verzweigungen und Schleifen
+  - Kennenlernen der gängigsten Algorithmen
+  - Entwerfen eigener Algorithmen
+  - Lesen und Verstehen von fremdem Code
 instruments:
-  - Hilfsmittel sind noch zu definieren.
+  - (Bekannte Algorithmen)[https://medium.com/@codingfreak/top-algorithms-data-structures-concepts-every-computer-science-student-should-know-e0549c67b4ac]
