--- a/data/topics/2/competencies/3/levels/3.yaml
+++ b/data/topics/2/competencies/3/levels/3.yaml
@@ -1,5 +1,9 @@
 ---
 goals:
-  - Funktionsweise einer Single-Page-Webanwendung verstehen
+  - Kann SPA bauen und deployen
+  - Versteht die Verwendung von Webservern
+  - Kann Frontend mit Backend Verknüpfen
 instruments:
-  - Hilfsmittel sind noch zu definieren.
+  - (Openshift)[https://learn.openshift.com]
+  - (Angular)[https://angular.io/tutorial]
+  - (React)[https://reactjs.org/tutorial/tutorial.html]
