--- a/data/topics/2/competencies/4/levels/2.yaml
+++ b/data/topics/2/competencies/4/levels/2.yaml
@@ -5,5 +5,5 @@ goals:
   - Deployment und Containerisierung von Applikationen
   
 instruments:
-  - (Deployment auf Openshift)[https://learn.openshift.com]
-  - (Microservices)[https://microservices.io/]
+  - '(Deployment auf Openshift)[https://learn.openshift.com]'
+  - '(Microservices)[https://microservices.io/]'
