--- a/data/topics/2/competencies/1/levels/1.yaml
+++ b/data/topics/2/competencies/1/levels/1.yaml
@@ -1,6 +1,6 @@
 ---
 goals:
-  - Einstieg in die Programmierung mit JavaScript.
+  - Einstieg in die Programmierung
   - Kennenlernen von Variablen, Typen, Verzweigungen und Schleifen
 instruments:
   - Hilfsmittel sind noch zu definieren.
