--- a/data/topics/2/competencies/1/levels/2.yaml
+++ b/data/topics/2/competencies/1/levels/2.yaml
@@ -4,4 +4,4 @@ goals:
   - Entwerfen eigener Algorithmen
   - Lesen und Verstehen von fremdem Code
 instruments:
-  - (Bekannte Algorithmen)[https://medium.com/@codingfreak/top-algorithms-data-structures-concepts-every-computer-science-student-should-know-e0549c67b4ac]
+  - '(Bekannte Algorithmen)[https://medium.com/@codingfreak/top-algorithms-data-structures-concepts-every-computer-science-student-should-know-e0549c67b4ac]'
