--- a/data/topics/2/competencies/2/competency.yaml
+++ b/data/topics/2/competencies/2/competency.yaml
@@ -1,3 +1,3 @@
 ---
 title: "Multi-Pape Applikation"
-description: "Verstehen und Umsetzen einer Multi-Pape Applikation"
+description: "Verstehen und Umsetzen einer Multi-Page Applikation"
