--- a/data/topics/2/competencies/3/levels/3.yaml
+++ b/data/topics/2/competencies/3/levels/3.yaml
@@ -4,6 +4,6 @@ goals:
   - Versteht die Verwendung von Webservern
   - Kann Frontend mit Backend Verknüpfen
 instruments:
-  - (Openshift)[https://learn.openshift.com]
-  - (Angular)[https://angular.io/tutorial]
-  - (React)[https://reactjs.org/tutorial/tutorial.html]
+  - '(Openshift)[https://learn.openshift.com]'
+  - '(Angular)[https://angular.io/tutorial]'
+  - '(React)[https://reactjs.org/tutorial/tutorial.html]'
