--- a/data/topics/2/competencies/4/levels/3.yaml
+++ b/data/topics/2/competencies/4/levels/3.yaml
@@ -4,5 +4,4 @@ goals:
   - Messaging Konzept verstehen
   
 instruments:
-  - (Smallrye Messaging Concecpts)[https://smallrye.io/smallrye-reactive-messaging/smallrye-reactive-messaging/2/index.html]
-
+  - '(Smallrye Messaging Concecpts)[https://smallrye.io/smallrye-reactive-messaging/smallrye-reactive-messaging/2/index.html]'
