--- a/data/topics/2/competencies/5/levels/1.yaml
+++ b/data/topics/2/competencies/5/levels/1.yaml
@@ -3,5 +3,5 @@ goals:
   - Versteht denn Sinn und Zweck von BuildTools
   - Kennt die gängigsten Dependencymanager und Buildtools
 instruments:
-  - (Maven)[https://maven.apache.org/]
-  - (Gradle)[https://gradle.org/]
+  - '(Maven)[https://maven.apache.org/]'
+  - '(Gradle)[https://gradle.org/]'
