--- a/data/topics/1/competencies/1/levels/1.yaml
+++ b/data/topics/1/competencies/1/levels/1.yaml
@@ -1,11 +1,12 @@
 ---
 goals:
   - 'HTML: Aufbau einer Webseite verstehen: Tags + Attribute.'
-  - 'HTML: Die wichtigsten HTML-Tags kennen.'
+  - 'HTML: Die wichtigsten HTML-Tags und Attribute kennen.'
+  - 'Trennung von Inhalt und Style'
   - 'CSS: Funktionsweise von Selektoren und Formatierung verstehen.'
-  - 'CSS: Die einfachen Styles anwenden können.'
-  - Trennung zwischen HTML und CSS verstehen.
-  - Einfache Layouts mit HTML + CSS umsetzen können.
+  - 'CSS: Die wichtigsten Styles anwenden können.'
+  - Trennung zwischen Inhalt und Style verstehen.
+  - Einfaches Layout mit HTML + CSS umsetzen können.
 instruments:
   - '[https://www.w3schools.com/html](https://www.w3schools.com/html)'
   - '[https://www.w3schools.com/css](https://www.w3schools.com/css)'
