--- a/data/topics/1/competencies/1/levels/3.yaml
+++ b/data/topics/1/competencies/1/levels/3.yaml
@@ -1,5 +1,13 @@
 ---
 goals:
-  - Verwendung von HTML-Framework wie Bootstrap anwenden können.
+  - Verwendung von HTML und CSS Frameworks
+  - 'Grid System verstehen: Bootstrap, Flexbox, SS Grid Layout'
 instruments:
-  - '[https://getbootstrap.com/](https://getbootstrap.com/)'
+  - '[Bootstrap](https://getbootstrap.com/)'
+  - '[Flexbox](https://css-tricks.com/snippets/css/a-guide-to-flexbox/)'
+  - '[CSS Grid Layout](https://css-tricks.com/snippets/css/complete-guide-grid/)'
+  - '[Bootstrap Alternatives: The top 36 options in 2020](https://classpert.com/blog/top-bootstrap-alternatives)'
+  - '[Foundation](https://get.foundation/)'
+  - '[Bulma](https://bulma.io/)'
+  - '[Tailwind CSS](https://tailwindcss.com/)'
+  - '[HTML5 ★ Boilerplate](https://html5boilerplate.com/)'
