--- a/data/master.yaml
+++ b/data/master.yaml
@@ -28,10 +28,11 @@ topics:
     2.1.2: 2 40-41
     2.1.3: 3 41-42
     2.2.1: 1 1-15
-    2.3.1: 1 33-5
-    2.3.2: 2 5-6
-    2.3.3: 3 6-7
-    2.3.4: 4 7-8
+    2.3.1: 1 33-40
+    2.3.2: 1 41-49
+    2.3.3: 2 5-6
+    2.3.4: 3 6-7
+    2.3.5: 4 7-8
     2.4.1: 1 47-50
     2.4.2: 2 50-51
     2.4.3: 3 51-52
@@ -161,13 +162,16 @@ competency_levels:
   - Todo
   id: 1.2.3
 - goals:
+  - 'Was ist JavaScript: Entstehung, Versionen, Funktionsweise, Sandbox-Prinzip'
   - JavaScript direkt in der HTML-Seite.
   - JavaScript in eine separate Datei auslagern.
   - Mit JavaScript einfache click-Handler umsetzen.
   - Ein Formular validieren und absenden.
   - 'Entwickler-Tools: Debuggen im Browser.'
   instruments:
-  - Hilfsmittel sind noch zu definieren.
+  - https://www.ecma-international.org/ecma-262
+  - https://developer.mozilla.org/de/docs/Web/JavaScript
+  - https://wiki.selfhtml.org/wiki/JavaScript
   id: 1.2.1
 - goals:
   - 'Textbearbeitung: Texte, Briefe erfassen und stylen, Grafiken'
@@ -244,20 +248,18 @@ competency_levels:
   - "(Gradle)[https://gradle.org/]"
   id: 2.5.1
 - goals:
+  - Single-Page-Webanwendung mit einem Framework und statischem Backend erstellen
+  instruments:
+  - "[Angular](https://angular.io)"
+  - "[Ember](https://emberjs.com)"
+  - "[React](https://reactjs.org)"
+  id: 2.3.2
+- goals:
   - Kann Single Page Applications erstellen
   - Kann CRUD Operationen visualisieren
   - Versteht SPAs im Zusammenspiel mit Backend und Datenbanken
   instruments:
   - "(Funktionsweise SPA)[https://www.bloomreach.com/en/blog/2018/07/what-is-a-single-page-application.html]"
-  - "(Angular)[https://angular.io/tutorial]"
-  - "(React)[https://reactjs.org/tutorial/tutorial.html]"
-  id: 2.3.2
-- goals:
-  - Kann SPA bauen und deployen
-  - Versteht die Verwendung von Webservern
-  - Kann Frontend mit Backend Verknüpfen
-  instruments:
-  - "(Openshift)[https://learn.openshift.com]"
   - "(Angular)[https://angular.io/tutorial]"
   - "(React)[https://reactjs.org/tutorial/tutorial.html]"
   id: 2.3.3
@@ -269,10 +271,19 @@ competency_levels:
   - "(jwt.io)[https://jwt.io/]"
   - "(SSO)[https://medium.com/@just_insane/keycloak-sso-part-1-what-is-single-sign-on-7229743c289b]"
   - "(Keycloak)[https://www.keycloak.org/documentation]"
+  id: 2.3.5
+- goals:
+  - Kann SPA bauen und deployen
+  - Versteht die Verwendung von Webservern
+  - Kann Frontend mit Backend Verknüpfen
+  instruments:
+  - "(Openshift)[https://learn.openshift.com]"
+  - "(Angular)[https://angular.io/tutorial]"
+  - "(React)[https://reactjs.org/tutorial/tutorial.html]"
   id: 2.3.4
 - goals:
   - Funktionsweise einer Single-Page-Webanwendung verstehen
-  - Erste Beispielstutorials durchgeführt
+  - Erste Beispielstutorials durchgeführt (ohne Framework + Backend)
   instruments:
   - Hilfsmittel sind noch zu definieren.
   id: 2.3.1
