--- a/data/topics/1/competencies/2/levels/1.yaml
+++ b/data/topics/1/competencies/2/levels/1.yaml
@@ -1,9 +1,12 @@
 ---
 goals:
+  - 'Was ist JavaScript: Entstehung, Versionen, Funktionsweise, Sandbox-Prinzip'
   - JavaScript direkt in der HTML-Seite.
   - JavaScript in eine separate Datei auslagern.
   - Mit JavaScript einfache click-Handler umsetzen.
   - Ein Formular validieren und absenden.
   - 'Entwickler-Tools: Debuggen im Browser.'
 instruments:
-  - Hilfsmittel sind noch zu definieren.
+  - 'https://www.ecma-international.org/ecma-262'
+  - 'https://developer.mozilla.org/de/docs/Web/JavaScript'
+  - 'https://wiki.selfhtml.org/wiki/JavaScript'
