--- a/data/topics/2/competencies/3/levels/2.yaml
+++ b/data/topics/2/competencies/3/levels/2.yaml
@@ -1,9 +1,7 @@
 ---
 goals:
-  - Kann Single Page Applications erstellen
-  - Kann CRUD Operationen visualisieren
-  - Versteht SPAs im Zusammenspiel mit Backend und Datenbanken
+  - Single-Page-Webanwendung mit einem Framework und statischem Backend erstellen
 instruments:
-  - '(Funktionsweise SPA)[https://www.bloomreach.com/en/blog/2018/07/what-is-a-single-page-application.html]'
-  - '(Angular)[https://angular.io/tutorial]'
-  - '(React)[https://reactjs.org/tutorial/tutorial.html]'
+  - '[Angular](https://angular.io)'
+  - '[Ember](https://emberjs.com)'
+  - '[React](https://reactjs.org)'
