--- a/data/topics/2/competencies/3/levels/4.yaml
+++ b/data/topics/2/competencies/3/levels/4.yaml
@@ -1,9 +1,9 @@
 ---
 goals:
-  - Kann Single-Page Applications sicher machen
-  - Versteht und kann Json-Web-Tokens (JWT) verwenden
-  - Versteht das Konzept eines Single-Sign-On Serivces
+  - Kann SPA bauen und deployen
+  - Versteht die Verwendung von Webservern
+  - Kann Frontend mit Backend Verknüpfen
 instruments:
-  - '(jwt.io)[https://jwt.io/]'
-  - '(SSO)[https://medium.com/@just_insane/keycloak-sso-part-1-what-is-single-sign-on-7229743c289b]'
-  - '(Keycloak)[https://www.keycloak.org/documentation]'
+  - '(Openshift)[https://learn.openshift.com]'
+  - '(Angular)[https://angular.io/tutorial]'
+  - '(React)[https://reactjs.org/tutorial/tutorial.html]'
